samples/_failures_safe/1761405676_554eac_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1ba8fa8e.c: In function ‘token_type_name’:
./samples/SAFE/__tmp_1ba8fa8e.c:160:9: error: expected declaration or statement at end of input
  160 |         case TOKEN_STRING:
      |         ^~~~
./samples/SAFE/__tmp_1ba8fa8e.c:160:9: error: expected declaration or statement at end of input
